cmake_minimum_required(VERSION 3.29)
project(Week4)

set(CMAKE_CXX_STANDARD 20)

add_executable(Week4 main.cpp
        week3/3_2.cpp
        week3/3_3.cpp
        week3/3_4.cpp
        week3/3_5.cpp
        week3/3_5_1.cpp
        week3/3_6.cpp
        week4/4_7.cpp
        week5/5_1.cpp
        week5/5_2.cpp
        week5/5_3.cpp
        week5/5_4.cpp
        week5/5_5.cpp
        week6/6_1.cpp
        week6/6_2.cpp
        week6/6_3.cpp
        week6/6_4.cpp
        week6/6_5.cpp
        prac/prac.cpp
        prac/1_namespace.cpp
        prac/2_pointer.cpp
        prac/3_reference.cpp
        prac/4_r_l_value.cpp
        prac/5_ref_func.cpp
        prac/6_ref_func2.cpp
        prac/7_class_prac.cpp
        prac/9_key_friend.cpp
        prac/10_fun_overloading.cpp
        prac/11_constructor.cpp
        prac/12_copy_constructor_base.cpp
        prac/13_shallow_copy.cpp
        prac/15_move_constructor.cpp
        prac/16_initializer_list.cpp
        prac/17_destructor.cpp
        prac/18_copy_only.cpp
        prac/19_copywithmove.cpp
        prac/14_deep_copy.cpp
        prac/21_key_static.cpp
        prac/22_key_this.cpp
        prac/8_key_const.cpp
        prac/23_key_mutable.cpp
        prac/24_key_explicit.cpp
        prac/25_operator_overloading.cpp
        prac/26_operator_overloading2.cpp
        prac/refsdfsf.cpp
        prac/20_new_delete.cpp
        prac/27_exception.cpp
        prac/28_inheritance.cpp
        week2/2_1.cpp
        week2/2_2.cpp
        week2/2_3.cpp
        week2/2_4.cpp
        week2/2_5.cpp
        week3_real/3_1.cpp
        week3_real/3_2.cpp
        week3_real/3_3.cpp
        week3_real/3_4.cpp
        week3_real/3_5.cpp
        week3_real/3_6.cpp
        week3_real/3_7.cpp
        week3_real/3_8.cpp
        week4/4_1.cpp
        week4/4_2.cpp
        week4/4_3.cpp
        week4/4_4.cpp
        week4/4_5.cpp
        week9/9_1.cpp
        week9/9_2.cpp
        week9/9_3.cpp
        week9/9_3_1.cpp
        week9/9_4.cpp
        week9/9_4_1.cpp
        week9/9_5.cpp
        week9/9_5_1.cpp
        week9/9_6.cpp
        week9/9_7.cpp
        week7/7_1.cpp
        week7/7_2.cpp
        week7/7_3.cpp
        week7/7_4.cpp
        week7/7_5.cpp
)
